<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".home.DocenteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="75dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/showLessons"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/visualizza_lezioni"/>

        <Button
            android:id="@+id/creaLezione"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/crea_lezione"/>

        <Button
            android:id="@+id/provaQR"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="QRCODE"/>

        <Button
            android:id="@+id/logoutDocente"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/logout" />

    </LinearLayout>
</RelativeLayout>